--- a/project_proposal.Rmd
+++ b/project_proposal.Rmd
@@ -58,7 +58,7 @@ appalachian_counties <- read_excel('data/appalachian_counties_ARC_2021.xlsx')
 
 Of the 13 states, five states (Kentucky, Maryland, New York, Ohio, and West Virginia) passed legislation mandating the expansion of medicaid as of January 1st, 2014. Two additional states, Pennsylvania and Virginia, would later expand Medicaid, with the former in 2015 and the latter in 2019. Six states (Alabama, Georgia, Mississippi, North Carolina, South Carolina, and Tennessee) have not expanded Medicaid to-date.
 
-We add a dummy variable into our data to reflect this policy difference.
+We add a dummy variable into our data to reflect this policy difference. Information on state-level Medicaid expansion available at: https://www.kff.org/medicaid/issue-brief/status-of-state-medicaid-expansion-decisions-interactive-map/.
 
 ```{r}
 # Create dummy variable for medicaid expansion and a variable for date of expansion
@@ -91,10 +91,10 @@ Our data on drug overdose deaths comes from estimates modeled by the National Ce
 ```{r}
 overdose_data <- read_csv("data/NCHS_-_Drug_Poisoning_Mortality_by_County__United_States.csv")
 
-# We only keep columns for FIPS codes (merging purposes) and modeled overdose deaths
+# Keep columns for FIPS codes (merging purposes), year, and modeled overdose deaths
 
 overdose_data <- overdose_data %>% 
-  select(FIPS, `Model-based Death Rate`) %>%
+  select(FIPS, Year, `Model-based Death Rate`) %>%
   rename(estimated_overdose_death_rate = `Model-based Death Rate`)
 ```
 
@@ -119,7 +119,7 @@ acs_2014 <- getCensus(name = "acs/acs1", vintage = 2014,
                                regionin = "state:*")
 
 
-#Pull 2014 ACS data
+#Pull 2015 ACS data
 acs_2014 <- getCensus(name = "acs/acs1", vintage = 2015,
                                vars = c("B00001_001E"),
                                region = "county:*",
@@ -127,4 +127,9 @@ acs_2014 <- getCensus(name = "acs/acs1", vintage = 2015,
 
 ```
 
+## Merge Data into Consolidated Data Set
+
+```{r}
+
+```
 
