--- a/project_proposal.Rmd
+++ b/project_proposal.Rmd
@@ -29,11 +29,11 @@ library(censusapi)
 
 # Reseach Question and Motivations
 
-*Did 2014 Medicaid expansion reduce drug overdose deaths in Appalachia?*
-
-hi neil
+**Did 2014 Medicaid expansion reduce drug overdose deaths in Appalachia?**
 
 # Policy Background
+
+The Affordable Care Act (ACA) was passed by the United States Congress and signed into law by President Barack Obama in 2010, drastically changing the policy landscape for 
 
 # Data Description
 
