--- a/project_proposal.Rmd
+++ b/project_proposal.Rmd
@@ -141,7 +141,7 @@ overdose_data <- overdose_data %>%
 
 ### ACS Data
 
-To control for time-variant, county-variant factors, we pull demographic data from the US Census Bureau's American Community Survey, for years 2012-2015. Data is downloaded from the US Census Bureau API using the package tidycensus.
+To control for time-variant, county-variant factors, we pull demographic data from the US Census Bureau's American Community Survey (ACS), for years 2012-2015. Data is downloaded from the US Census Bureau API using the package tidycensus.
 
 ```{r}
 census_api_key("b79b301dc87bb0fd551147883a8141dca4e2823e")
